--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,15 @@
 MONGO_URI = mongodb+srv://userAuth:65PBFV0t3eKJeypE@userauth.cren0.mongodb.net/?retryWrites=true&w=majority&appName=userAuth
 PORT = 5023
 
+CLIENT_URL = http://localhost:3000
+
+EMAIL_USER = aykutonlat@outlook.com
+EMAIL_PASS = Gz5a57ao
+
 ACCESS_TOKEN_SECRET = 123456789
 ACCESS_TOKEN_SECRET_EXPIRES_IN = 15m
 REFRESH_TOKEN_SECRET = 987654321
 REFRESH_TOKEN_SECRET_EXPIRES_IN = 30d
+
+REGISTRATION_TOKEN_SECRET = 123456789
+REGISTRATION_TOKEN_SECRET_EXPIRES_IN = 1d
