--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
@@ -35,6 +36,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "nodemailer": "^6.9.15"
   }
 }
